style/main.css
/* ... */
.placeholder {
    display: flex;
    flex-direction: column;
    gap: 5px;
    align-items: flex-start;
}

.route {
    display: inline-block;
    padding: 1px 6px;
    font-size: 10pt;
    font-weight: bold;
    border-width: 1px;
    border-style: solid;
    text-align: center;
}

.route.min-width {
    min-width: 24px;
}

.route-list {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.route-list .route {
    font-size: 9pt;
}

.route-line {
    width: 4px;
    border-radius: 2px;
    flex-shrink: 0;
    align-self: stretch;
}

.row {
    display: flex;
    flex-direction: row;
    gap: 10px;
    align-items: center;
    justify-content: left;
}

.row.justify-center {
    justify-content: center;
}

.row.justify-right {
    justify-content: right;
}

.row.align-center {
    align-items: center;
}

.row.align-start {
    align-items: flex-start;
}

.row.space-between {
    justify-content: space-between;
}

.sheet {
    padding: 10px;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    gap: 10px;
    align-self: stretch;
}

.sheet .dates {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    row-gap: 5px;
    column-gap: 10px;
}

.sheet .dates .month {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 5px;
}

.sheet .dates .month .name {
    font-size: 12pt;
}

.sheet .dates .month.title .name {
    font-size: 13pt;
}

.sheet .dates .month .date {
    font-size: 10pt;
    padding: 1px 4px;
    border-radius: 4px;
    min-width: 14px;
    user-select: none;
    text-align: center;
    text-decoration: none;
}

.sheet .title {
    margin-bottom: 0px;
    text-align: center;
}

.sheet-list {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.sheet-list .footer {
    width: 75%;
    margin: 0px auto 0px auto;
    font-size: 10pt;
    text-align: center;
}

.sheet-list .legend {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    gap: 10px;
    font-size: 10pt;
}

.sheet-list .legend .icon {
    width: 10px;
    height: 10px;
    border-radius: 2px;
}

.stop {
    display: inline-block;
}

.stop .stop-name {
    display: inline-block;
    margin-right: 5px;
    vertical-align: middle;
}

.stop .stop-number {
    display: inline-block;
    padding: 1px 4px;
    border-radius: 4px;
    font-size: 10pt;
    vertical-align: middle;
    background-color: var(--stop-number-background);
    color: var(--stop-number-text);
    border: 1px solid var(--stop-number-border);
}

.tab-button-bar {
    display: flex;
    flex-direction: row;
    gap: 1px;
    margin-bottom: -6px;
    border-width: 1px;
    border-style: solid;
}

.tab-button {
    padding: 10px;
    cursor: default;
    font-size: 13pt;
    font-weight: bold;
    vertical-align: middle;
    font-family: var(--sans-serif-font);
    text-align: center;
    text-decoration: none !important;
}

.tab-button:hover {
    cursor: pointer;
}

.tab-button.current:hover {
    cursor: default !important;
}

.table-border-wrapper {
    border: 1px solid var(--table-border);
}

.table-border-wrapper table {
    border-width: 0px;
}

.table-border-wrapper table tr:last-child td {
    border-bottom-width: 0px;
}

.timeline {
    position: relative;
    height: 15px;
    margin-top: 2px;
}

.timeline .now {
    position: absolute;
    top: -2px;
    bottom: -2px;
    width: 2px;
    z-index: 10;
    transform: translateX(-1px);
}

.timeline .section {
    position: absolute;
    height: 100%;
}

.timeline .section:hover {
    border-width: 2px;
    border-style: solid;
    margin-top: -2px;
    margin-left: -2px;
    z-index: 20;
}

.timeline .section.non-current {
    opacity: 0.2;
}

.timeline .section.non-current:hover {
    opacity: 1;
}

.timespan {
    position: relative;
    height: 4px;
}

.timespan .time {
    position: absolute;
    top: 0px;
    height: 2px;
    width: 2px;
    transform: translateX(-1px);
}

.timespan .time.hour {
    height: 6px;
    top: -2px;
}

.timing-point {
    font-weight: bold;
}

.toggle-button {
    --image-color: var(--toggle-button-color);
    --image-size: 30px;
}

.toggle-button:hover {
    cursor: pointer;
}

.tooltip-anchor {
    display: inline-block;
    position: relative;
}

.tooltip-anchor .tooltip {
    background-color: var(--tooltip-background);
    color: var(--tooltip-text);
    display: none;
    padding: 5px 10px;
    position: absolute;
    z-index: 10;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    top: 50%;
    transform: translate(0px, -50%);
    border-radius: 5px;
    font-size: 11pt;
    font-family: var(--sans-serif-font);
    text-align: left;
    width: max-content;
    max-width: 300px;
    font-weight: normal;
    line-height: normal;
}

.tooltip-anchor .tooltip.left {
    right: calc(100% + 10px);
}

.tooltip-anchor .tooltip.left::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 100%;
    margin-top: -5px;
    border-color: transparent transparent transparent var(--tooltip-background);
    border-width: 5px 0px 5px 5px;
    border-style: solid;
}

.tooltip-anchor .tooltip.right {
    left: calc(100% + 10px);
}

.tooltip-anchor .tooltip.right::after {
    content: "";
    position: absolute;
    top: 50%;
    right: 100%;
    margin-top: -5px;
    border-color: transparent var(--tooltip-background) transparent transparent;
    border-width: 5px 5px 5px 0px;
    border-style: solid;
}

.tooltip-anchor:hover > .tooltip {
    display: flex;
    flex-direction: column;
    gap: 2px;
}

.tooltip-anchor .tooltip .title {
    font-weight: bold;
}

.trip {
    align-self: flex-start;
}
/* ... */

